--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 package-lock.json
 node_modules/
 {
-  "name": "filnfounder",
+  "name": "filmfounder",
   "description": "crowdfunding cinema projects",
   "version": "1.0.0",
   "engines": {
