--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "mweb3-demo-waves",
     "version": "0.1.0",
+      "engines": {
+    "node": "10.16.2"
+  },
     "scripts": {
         "build": "webpack",
         "watch": "webpack --watch"
